--- a/Modulo02/Ex007/style.css
+++ b/Modulo02/Ex007/style.css
@@ -13,3 +13,12 @@ h1{
 h2{
     color: rgb(38, 63, 63);
 }
+.basico{
+    color: blue;
+}
+.intermediario{
+    color: rgb(0, 0, 0);
+}
+.avançado{
+    color: brown;
+}
